# colregs-core

./: .gitignore  COORDINATE_SYSTEM_GUIDE.md  README.md  coordinate_system_analysis.py  maritime_simulation.py  otter_analysis.md  otter_coordinate_analysis.py  pyproject.toml  realistic_maritime_simulation.py  tcpa_calculation_demo.py
docs/: COORDINATE_TRANSFORMATION.md  usage_guide.md
examples/: quickstart.py
integration_tests/: README.md  __init__.py  run_tests.sh  test_colregs_integration.py  test_with_irsim.py
src/colregs_core/: __init__.py
src/colregs_core/SIM_ENV/: __init__.py  otter_sim.py
src/colregs_core/encounter/: classifier.py  types.py
src/colregs_core/geometry/: __init__.py  bearings.py  coordinate_transform.py  grid_mapping.py
src/colregs_core/reward/: __init__.py  chun_reward.py  colregs_compliant.py  jeon_reward.py  my_reward.py
src/colregs_core/risk/: __init__.py  collision_risk.py  cpa_tcpa.py  risk_matrix.py  ship_domain.py
src/colregs_core/utils/: __init__.py  utils.py
src/colregs_core/worlds/: otter_world.yaml  robot_world.yaml
src/colregs_core/worlds/imazu_scenario/: s1.yaml  s1_corrected.yaml
tests/: test_colregs_classification.py  test_multi_vessel_encounter.py  test_reward_comparison.py
