[tool.poetry]
name = "colregs-core"
version = "0.1.0"
description = "COLREGs-based encounter situation classification and collision risk assessment for maritime navigation"
authors = ["Maritime Robotics Lab"]
readme = "README.md"
license = "MIT"
packages = [{include = "colregs_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
scipy = "^1.15.2"
shapely = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^4.1.0"
black = "^24.0.0"
mypy = "^1.11.0"

[tool.poetry.group.viz.dependencies]
matplotlib = "^3.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
